# wrymium

./: Cargo.toml  LICENSE  README.md  README.zh-CN.md
benchmarks/: package.json  playwright_bench.mjs
cargo-wrymium/: Cargo.toml
cargo-wrymium/src/: main.rs
docs/: TODO.md  benchmark.md  browser-use-plan.md  cef-startup-performance.md  getting-started.md  ipc-deep-dive.md  platform-trait-callsite-analysis.md  spike-1-message-loop.md  spike-4-resize-sync.md  testing-strategy.md  wry-api-surface.md  wrymium-spec.md
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/bench/: Cargo.toml
examples/bench/src/: main.rs
examples/browser-use-agent/: README.md
examples/browser-use-agent/src/: agent.ts  browser.ts  index.ts  llm.ts  types.ts
examples/cdp-test/: Cargo.toml
examples/cdp-test/src/: main.rs
examples/claude-desktop/: Cargo.toml
examples/claude-desktop/frontend/: app.js  index.html  style.css
examples/claude-desktop/src/: main.rs
examples/feishu/: Cargo.toml
examples/feishu/src/: main.rs
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: main.rs
examples/webview-control/: Cargo.toml
examples/webview-control/src/: main.rs
scripts/: bundle-macos.sh
tauri-runtime-wry/: Cargo.toml
tauri-runtime-wry/src/: lib.rs
tests/fixtures/: a11y.html  basic.html  dynamic.html  form.html  iframe.html  network.html  scroll.html  spa.html
wrymium/: Cargo.toml  build.rs
wrymium/src/: browser_use.rs  cdp.rs  cef_init.rs  context.rs  error.rs  lib.rs  log.rs  renderer.rs  scheme.rs  tests.rs  types.rs  webview.rs
wrymium/src/platform/: linux.rs  macos.rs  windows.rs
xtask/src/: main.rs
